force-app/main/default/objects/Invoice_Line__c/Invoice_Line__c.object-meta.xml
<CustomObject>
    <label>Pxm Invoice Line</label>
    <nameField>
        <label>Pxm Invoice Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pxm Invoice Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>