force-app/main/default/objects/Invoice_Line__c/fields/Consultant__c.field-meta.xml
<CustomField>
    <fullName>Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pxm Invoice Lines</relationshipLabel>
    <relationshipName>Pxm_Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>