force-app/main/default/objects/Invoice_Line__c/fields/Line_Description__c.field-meta.xml
<CustomField>
    <fullName>Line_Description__c</fullName>
    <label>Line Description</label>
    <type>TextArea</type>
</CustomField>