force-app/main/default/objects/Invoice_Line__c/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <label>PO Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>