force-app/main/default/objects/Invoice_Line__c/fields/Pxm_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Pxm_Invoice__c</fullName>
    <label>Pxm Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Pxm Invoice Lines</relationshipLabel>
    <relationshipName>Pxm_Invoice_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>